--- a/Robot_2025_offseson/config.json
+++ b/Robot_2025_offseson/config.json
@@ -13,61 +13,76 @@
       "axis": "z",
       "degrees": 0
     }
-
   ],
-  "position": [-0.35, 0.41, 0.04], 
+  "position": [
+    -0.35,
+    0.41,
+    0.04
+  ],
   "cameras": [],
-  "components":[
+  "components": [
     {
-    "zeroedRotations":[
-    {
-      "axis": "x",
-      "degrees": 180
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 180
+        },
+        {
+          "axis": "y",
+          "degrees": 90
+        },
+        {
+          "axis": "z",
+          "degrees": 0
+        }
+      ],
+      "zeroedPosition": [
+        -0.3,
+        0.57,
+        0.3
+      ]
     },
     {
-      "axis": "y",
-      "degrees": 90
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 0
+        },
+        {
+          "axis": "y",
+          "degrees": 0
+        },
+        {
+          "axis": "z",
+          "degrees": 180
+        }
+      ],
+      "zeroedPosition": [
+        0.08,
+        0.055,
+        0.314
+      ]
     },
     {
-      "axis": "z",
-      "degrees": 0
-    }
-    ],
-    "zeroedPosition":[ -0.3, 0.57, 0.3]
-    },
-    {
-    "zeroedRotations":[
-    {
-      "axis": "x",
-      "degrees": 0
-    },
-    {
-      "axis": "y",
-      "degrees": 0
-    },
-    {
-      "axis": "z",
-      "degrees": 180
-    }
-    ],
-    "zeroedPosition":[ 0.08, 0.055, 0.314]
-    },
-     {
-    "zeroedRotations":[
-    {
-      "axis": "x",
-      "degrees": 0
-    },
-    {
-      "axis": "y",
-      "degrees": -90
-    },
-    {
-      "axis": "z",
-      "degrees": 0
-    }
-    ],
-    "zeroedPosition":[-0.07, -0.41, -0.1]
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 0
+        },
+        {
+          "axis": "y",
+          "degrees": -90
+        },
+        {
+          "axis": "z",
+          "degrees": 0
+        }
+      ],
+      "zeroedPosition": [
+        -0.07,
+        -0.41,
+        -0.1
+      ]
     }
   ]
 }
