--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,21 +1,34 @@
 {
-  "robotWidth": 0.9,
-  "robotLength": 0.9,
+  "robotWidth": 0.86,
+  "robotLength": 0.86,
   "holonomicMode": true,
   "pathFolders": [],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
+  "defaultMaxVel": 5.03,
   "defaultMaxAccel": 3.0,
-  "defaultMaxAngVel": 540.0,
+  "defaultMaxAngVel": 573.0,
   "defaultMaxAngAccel": 720.0,
-  "robotMass": 74.088,
-  "robotMOI": 6.883,
-  "robotWheelbase": 0.546,
+  "defaultNominalVoltage": 12.0,
+  "robotMass": 15.7,
+  "robotMOI": 6.40986,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.048,
-  "driveGearing": 5.143,
-  "maxDriveSpeed": 5.45,
-  "driveMotorType": "krakenX60FOC",
-  "driveCurrentLimit": 60.0,
-  "wheelCOF": 1.2
+  "driveWheelRadius": 0.051,
+  "driveGearing": 6.75,
+  "maxDriveSpeed": 5.03,
+  "driveMotorType": "krakenX60",
+  "driveCurrentLimit": 40.0,
+  "wheelCOF": 1.0,
+  "flModuleX": 0.298275,
+  "flModuleY": 0.298275,
+  "frModuleX": 0.298,
+  "frModuleY": -0.298275,
+  "blModuleX": -0.298275,
+  "blModuleY": 0.298275,
+  "brModuleX": -0.298275,
+  "brModuleY": -0.298275,
+  "bumperOffsetX": 0.0,
+  "bumperOffsetY": 0.0,
+  "robotFeatures": [
+    "{\"name\":\"Circle\",\"type\":\"circle\",\"data\":{\"center\":{\"x\":0.0,\"y\":0.0},\"radius\":0.1,\"strokeWidth\":0.02,\"filled\":false}}"
+  ]
 }
