--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -2,8 +2,14 @@
   "robotWidth": 0.89,
   "robotLength": 0.96,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "red",
+    "blue"
+  ],
+  "autoFolders": [
+    "red",
+    "blue"
+  ],
   "defaultMaxVel": 5.03,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 573.0,
