control command with armPitch sim start

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "ArmPitchIO",
+      "request": "launch",
+      "mainClass": "frc.robot.subsystems.ArmPitchSim.ArmPitchIO",
+      "projectName": "2025_robot_code_offseson"
+    },
+    {
+      "type": "java",
       "name": "Main",
       "request": "launch",
       "mainClass": "frc.robot.Main",
