swerve with sim without log

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,5 @@
   "[java]": {
     "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
   },
-  "wpilib.selectDefaultSimulateExtension": true
+  "wpilib.selectDefaultSimulateExtension": false
 }
